# dlm

./: .gitignore  CMakeLists.txt  README.md  build-win.sh  build.sh  install.sh
.github/workflows/: release.yml
Docs/: README.md  architecture.md  auto-tools.md  building.md  compat.md  protocol.md  requirements.md
cli/: client.c  client.h  dlm.c
cmake/: toolchain-mingw64.cmake
daemon/: dlmd.c  ipc.c  ipc.h  queue.c  queue.h
gui/: main.c
installer/appimage/: build-appimage.sh
installer/windows/: Dockerfile  README.md  build.sh  dlm.nsi  prep-libadwaita.sh
libdlm/: download.c  extract.c  httpget.c  httpget.h  iaauth.c  internal.h  store.c  tools.c  util.c  verify.c
libdlm/compat/: compat.h  dlm_io.c  dlm_io.h  dlm_misc.c  dlm_misc.h  dlm_paths.c  dlm_paths.h  dlm_proc.c  dlm_proc.h  dlm_sock.c  dlm_sock.h
libdlm/extractors/: archiveorg.c  ytdlp.c
libdlm/include/dlm/: dlm.h  store.h  tools.h  verify.h
packaging/: cmake_uninstall.cmake.in  dlm.desktop  dlm.service.in
scripts/: diag.sh  lib.sh  ops.sh  smoke.sh
tests/: CMakeLists.txt  test_ipc.c  test_package.c  test_queue.c  test_ytdlp.c
